Bug 705106 - Use the correct scroll port size when trying to scroll to an area. r=roc